--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,19 @@
 <header class="header">
 
-  <nav class="nav">
+  <nav class="nav ">
 
-    <div class="nav-container">
+    <div class="nav-container anim">
 
-      <div class="nav-left">
-        <a href="/"><img src="/images/blogbytes-logo.png" alt="" /></a>
+      <div class="nav-left anim">
+        <a href="/"><img src="/images/blogbytes-logo-black.png" alt="" /></a>
         {{!-- <p class="nav-heading">BlogByte.</p> --}}
       </div>
 
-      <div class="nav-right">
-        <a href="#" class="nav-btn">ABOUT</a>
+      <div class="nav-right anim">
+        <a href="" class="nav-btn">ABOUT</a>
         <a href="#" class="nav-btn">EXPLORE</a>
         <a href="#" class="nav-btn">CONTACT</a>
-        <a href="/admin" class="nav-btn log-in-btn">ADMIN</a>
+        {{!-- <a href="/admin" class="nav-btn log-in-btn">ADMIN</a> --}}
         <a href="/user-login" class="nav-btn log-in-btn">LOGIN</a>
       </div>
 
@@ -25,30 +25,46 @@
 
     <div class="hs-first">
 
-        <h1 class="hs-heading">
+        <h1 class="hs-heading anim">
             PUBLISH YOUR<br> PASSION
         </h1>
-        <h3 class="hs-subheading">
+        <h3 class="hs-subheading anim">
             Find, Research and Create Your <span class="hs-heading-span">Blogs</span>
         </h3>
 
         <div class="header-btn">
-            <a href="/user-login">GET STARTED</a>
+            <a class="anim" href="/user-login">GET STARTED</a>
         </div>
 
     </div>
 
     <div class="hs-second">
 
-        <img src="/images/header-blog.svg" alt="">
+        {{!-- <img src="/images/header-blog.svg" alt=""> --}}
 
     </div>
 
   </section>
 </header>
 
-<section class="section-first">
+<section class="about-body">
+<div class="about-section">
 
+    <div class="about-inner-container">
+      <h1 class="about-heading">About</h1>
+      <p class="about-text">
+Welcome to our tech blogging portal, where technology enthusiasts can create and share their thoughts and insights on the latest trends in the tech industry. Our platform is designed to provide a community-driven experience, where users can create their own blogs, publish articles, and engage in meaningful discussions with like-minded individuals.
 
+Our team of experienced tech writers are dedicated to keeping you up-to-date with the latest news and developments in the industry. From new gadgets and devices to software updates and cybersecurity issues, we cover it all.
+
+But it's not just about us. We believe that our community of users is what makes our platform truly special. We encourage users to create their own blogs and share their knowledge and expertise with others. Whether you're a seasoned tech blogger or just starting out, we welcome everyone to share their unique perspectives and insights.
+
+Our platform also allows users to like, read, and comment on other users' blogs, creating a vibrant and engaging environment for discussion and collaboration. We believe that by fostering a sense of community and collaboration, we can create a platform that truly benefits all of our users.
+
+So, whether you're looking to stay up-to-date with the latest tech news or share your own insights with others, we invite you to join our community and become a part of the conversation.
+      </p>
+    </div>
+
+</div>
 </section>
 
