--- a/views/user-auth/login.hbs
+++ b/views/user-auth/login.hbs
@@ -2,14 +2,14 @@
 
   <img class="wave" src="/images/draw.png" />
   <div class="container">
-    <div class="img">
+    <div class="img anim">
       <a href="/">
       <img id="logo-img" src="/images/blogbytes-logo-black.png" class="log-in-home"/>
       </a>
       <img src="/images/left-signin.svg">
     </div>
  
-    <div class="login-content">
+    <div class="login-content anim">
       <form action="/user-login" method="post">
         <img src="/images/profile.svg" />
         <h2 class="title">WELCOME TO BLOGBYTE</h2>
