--- a/views/user-content/blog-detail.hbs
+++ b/views/user-content/blog-detail.hbs
@@ -1,4 +1,4 @@
-<section id="sidebar">
+<section id="sidebar" >
     <div class="user-nav-left">
         <a href="/user-dashboard"><img src="/images/blogbytes-logo-black.png" alt="" /></a>
     </div>
@@ -43,7 +43,7 @@
 <!-- SIDEBAR -->
 
 <!-- CONTENT -->
-<section id="content">
+<section id="content" class="anim">
     <!-- NAVBAR -->
     <nav>
         <i class="bx bx-menu"></i>
