--- a/views/user-content/profile.hbs
+++ b/views/user-content/profile.hbs
@@ -46,7 +46,7 @@
 <!-- SIDEBAR -->
 
 <!-- CONTENT -->
-<section id="content">
+<section id="content" class="anim">
   <!-- NAVBAR -->
   <nav>
     <i class="bx bx-menu"></i>
