--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,7 +79,19 @@ a {
 ::-webkit-scrollbar-thumb:hover {
   background-color: #1164a6;
 }
+.anim{
+  opacity: 0;
+  transform: translateY(30px);
+  animation: moveup 0.5s linear forwards;
+}
 
+@keyframes moveup {
+
+  100%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 
 /* HEADER */
 
@@ -99,6 +111,7 @@ a {
 .nav-container {
   display: flex;
   font-family: "Syne";
+  animation-delay: 0.5s;
   /* background: linear-gradient(210deg,#1164a6, #212729); */
 }
 
@@ -108,6 +121,7 @@ a {
   align-items: center;
   width: 30%;
   margin: 18px 0px;
+  animation-delay: 0.5s;
 }
 .nav-left img {
   height: 51px;
@@ -119,6 +133,7 @@ a {
   justify-content: flex-end;
   align-items: center;
   width: 68%;
+  animation-delay: 0.8s;
 }
 
 .nav-btn {
@@ -133,7 +148,7 @@ a {
 .nav-btn::after {
   content: "";
   position: absolute;
-  background-color: #ffffff;
+  background-color: #1164a6;
   height: 3px;
   width: 0;
   left: 0;
@@ -158,7 +173,7 @@ a {
 }
 .hs-first {
   color: white;
-  width: 50%;
+  width: 100%;
   display: flex;
   margin-left: 80px;
   margin-top: 50px;
@@ -173,6 +188,7 @@ a {
     letter-spacing: 0.2rem;
     text-shadow: 15px 15px 15px rgba(0, 0, 0, 0.5);
     font-family: "Syne";
+    animation-delay: 1s;
 }
 
 .hs-subheading {
@@ -180,6 +196,7 @@ a {
   font-family: "Poppins-light";
   letter-spacing: 1px;
   margin-bottom: 26px;
+  animation-delay: 1.5s;
 }
 .header-btn a {
   background-color: white;
@@ -196,6 +213,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  animation-delay: 2s;
 }
 .header-btn a:hover {
   background-color: #1164a6;
@@ -214,6 +232,43 @@ a {
   align-items: center;
 }
 
+
+/* ABOUT SECTION */
+
+.about-body{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f1f1f1;
+  box-sizing: border-box;
+}
+.about-section{
+  background: url(/images/about-section.jpg) no-repeat left;
+  background-size: 55%;
+  background-color: #fdfdfd;
+  overflow: hidden;
+  padding: 100px 0;
+}
+.about-inner-container{
+  width: 55%;
+  float: right;
+  background-color: #fdfdfd;
+  padding: 150px;
+}
+.about-inner-container h1{
+  margin-bottom: 30px;
+  font-size: 45px;
+  font-weight: 900;
+}
+.about-text{
+  font-size: 15px;
+  color: #545454;
+  line-height: 28px;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+
 /* SIGN_IN */
 
 .log-in-home {
@@ -221,6 +276,7 @@ a {
   top: 200px;
   left: 200px;
 }
+
 
 
 .wave {
@@ -244,6 +300,7 @@ a {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  animation-delay: 0.5s;
 }
 
 #logo-img {
@@ -260,6 +317,7 @@ a {
   justify-content: flex-start;
   align-items: center;
   text-align: center;
+  animation-delay: 1s;
 }
 
 .img img {
@@ -682,6 +740,7 @@ a:hover {
 	transition: .3s ease;
 	overflow-x: hidden;
 	scrollbar-width: none;
+  animation-delay: 0.5s;
 }
 #sidebar::--webkit-scrollbar {
 	display: none;
@@ -788,6 +847,7 @@ a:hover {
 	width: calc(100% - 280px);
 	left: 280px;
 	transition: .3s ease;
+  animation-delay: 1s;
 }
 #sidebar.hide ~ #content {
 	width: calc(100% - 60px);
@@ -1180,7 +1240,8 @@ textarea{
   outline: none;
   cursor: pointer;
   text-align: center;
-  background-color: #3d3d3d;
+  background-color: var(--blue);
+  border: none;
   color: white;
   font-size: 14px;
 }
