--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,9 @@
     {{! FONT AWESOME }}
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+
   </head>
 
   <body>
@@ -35,7 +38,8 @@
       <div>B</div>
     </div>
     {{{body}}}
-
+    <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
   </body>
 
