--- a/views/user-auth/signup.hbs
+++ b/views/user-auth/signup.hbs
@@ -3,7 +3,7 @@
   <div class="container">
 
 
-    <div class="img">
+    <div class="img anim">
       <a href="/">
         <img
           id="logo-img"
@@ -15,7 +15,7 @@
     </div>
 
 
-    <div class="login-content">
+    <div class="login-content anim">
       <form action="/user-signup" method="post">
         <img src="/images/profile.svg" />
         <h2 class="title">WELCOME TO BLOGBYTE</h2>
