--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -1,5 +1,5 @@
 <!-- SIDEBAR -->
-<section id="sidebar">
+<section id="sidebar" class="anim">
   <div class="user-nav-left">
     <a href="/user-dashboard"><img
         src="/images/blogbytes-logo-black.png"
@@ -47,7 +47,7 @@
 <!-- SIDEBAR -->
 
 <!-- CONTENT -->
-<section id="content">
+<section id="content" class="anim">
   <!-- NAVBAR -->
   <nav>
     <i class="bx bx-menu"></i>
