--- a/views/user-content/edit-blog.hbs
+++ b/views/user-content/edit-blog.hbs
@@ -43,7 +43,7 @@
 <!-- SIDEBAR -->
 
 <!-- CONTENT -->
-<section id="content">
+<section id="content" class="anim">
   <!-- NAVBAR -->
   <nav>
     <i class="bx bx-menu"></i>
