--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,7 +26,7 @@
     <div class="hs-first">
 
         <h1 class="hs-heading anim">
-            PUBLISH YOUR<br> PASSION
+            PUBLISH YOUR<br> <span class="multiText">PASSION</span> 
         </h1>
         <h3 class="hs-subheading anim">
             Find, Research and Create Your <span class="hs-heading-span">Blogs</span>
